# rag_assignment

./: .env.example  .gitignore  README.md  docker-compose.yml  hld.md  lld.md  plan.md  plan_hybrid_search_settings.md  user-flow.md
backend/: Dockerfile  alembic.ini  init.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0b65ccdbb93d_add_message_debug_context.py  20260617_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/app/domain/: __init__.py  models.py
backend/app/models/: __init__.py  base.py  domain.py  schemas.py  tables.py
backend/app/repositories/: chunk_repo.py  conversation_repo.py  document_repo.py
backend/app/routers/: conversations.py  documents.py  health.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: chunker.py  conversation_service.py  embeddings.py  ingestion.py  llm.py  pdf_parser.py  reranker.py  retrieval.py  storage.py  vector_store.py
backend/app/services/ingestion/: __init__.py  chunker.py  embeddings.py  ingestion.py  storage.py
backend/app/services/retrieval/: __init__.py  reranker.py  retrieval.py
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: Chat.jsx  Citation.jsx  Documents.jsx  Navbar.jsx  Sidebar.jsx  Upload.jsx
frontend/src/pages/: ChatPage.jsx  DocumentsPage.jsx  SettingsPage.jsx  UploadPage.jsx
