[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG Document Q&A backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "asyncpg==0.29.0",
    "pydantic-settings==2.3.4",
    "python-multipart==0.0.9",
    "minio==7.2.7",
    "pypdf==4.2.0",
    "sentence-transformers==3.0.1",
    "langchain==0.2.5",
    "langchain-groq==0.1.5",
    "langchain-openai==0.1.8",
    "langchain-community==0.2.5",
    "alembic==1.13.2",
    "sqlalchemy[asyncio]==2.0.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
